| Bug #1993 | bit functions do not return unsigned values | ||
|---|---|---|---|
| Submitted: | 2 Dec 2003 3:35 | Modified: | 10 Dec 2003 6:41 |
| Reporter: | Masaki Fujimoto | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.0.16 | OS: | |
| Assigned to: | Konstantin Osipov | Target Version: | |
[2 Dec 2003 3:35]
Masaki Fujimoto
[10 Dec 2003 6:41]
Konstantin Osipov
Fixed in 4.0.17: bk commit - 4.0 tree (konstantin:1.1634)
