fix for bug #1993 'bit functions do not return unsigned values' introduced base class Item_func_bit for bit functions